<resources>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail:</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha:</string>
    <string name="app_name">Quilombytes</string>
    <string name="pag_entrada">Adicionar imagem/texto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="config_cf">Configurações</string>
    <string name="ajuda_aj">Ajuda</string>
    <string name="sobre_ns">Sobre Nós</string>
    <string name="action_settings">Settings</string>
    <string name="tituloLayoutPaginaInicial">
        Sejam bem vindos ao APP Quilombola!
    </string>
    <string name="textoTituloAbril01">
        Dia 01
    </string>
    <string name="textoConteudoAbril01">
        - Acontece o Primeiro Festival Mundial das Artes Negras. Dakar/Senegal (1966). \n
        - Criação do Partido dos Panteras Negras. EUA (1967). \n
    </string>
    <string name="textoTituloAbril04">
        Dia 04
    </string>
    <string name="textoConteudoAbril04">
        - Morre Marthin Luther King, ativista e Prêmio Nobel da Paz, assassinado minutos antes de uma marcha em favor dos direitos dos negros.
        Memphis/EUA (1968). \n
    </string>
    <string name="textoTituloAbril05">
        Dia 05
    </string>
    <string name="textoConteudoAbril05">
        - Nasce Vicente Ferreira Pastinha, o “Mestre Pastinha”, capoeirista e ícone da cultura afro-brasileira.
        Salvador/BA (1889). \n
    </string>
    <string name="textoTituloAbril25">
        Dia 25
    </string>
    <string name="textoConteudoAbril25">
        - Criado o bloco afro Olodum. Salvador/BA (1979). \n
    </string>
    <string name="textoTituloAbril26">
        Dia 26
    </string>
    <string name="textoConteudoAbril26">
        - Nasce Benedita Silva, primeira mulher negra a ocupar um cargo de governadora.
        Praia do Pinto/RJ (1942). \n
    </string>
    <string name="textoTituloMulheresQuilombola">
        Mulheres Quilombolas na História
    </string>
    <string name="textoIntroducaoMulheresQuilombola">
        As mulheres que foram escravizadas no Brasil contribuiram, e muito, para acabar com escravidão no país. Engana-se quem acha que a Princesa Isabel foi a responsável
        pela libertação dos escravizados, como diria a cantora Yzalú,” a Lei Áurea não passa de um texto morto”, afinal após o 13 de maio de 1888, mulheres lutaram, e ainda
        lutam contra a racismo e machismo. \n
    </string>
    <string name="textoByPatriciaGonçalves">
        Por  Patrícia Gonçalves, do Catraca Livre.
    </string>
    <string name="textoIntroducaoDoisMulheresQuilombola">
        Os passos das mulheres negras vêm de longe, mesmo.  Por isso, separamos 17 mulheres negras que fizeram parte de quilombos brasileiros e foram fundamentais em algum
        momento para a comunidade negra. As histórias são relatadas nos cordéis de Jarid Arraes e do Mural Memória das Mulheres Negras, acervo do Instituto Políticas
        Alternativas para o Cone Sul, Rio de Janeiro. \n
    </string>
    <string name="textoTituloUmDadara">
        Dandara dos Palmares
    </string>
    <string name="textoUmDadara">
        É uma das líderes mais conhecidas no Brasil. Lutou contra a escravidão em Palmares. Foi contra a proposta da Coroa Portuguesa em condicionar as reivindicações dos
        quilombolas. A guerreira morreu durante a disputa no Quilombo dos Macacos pertencente ao Quilombo de Palmares, onde vivia também seu marido, Zumbi dos Palmares. \n
    </string>
    <string name="textoTituloDoisAnastacia">
        Anastácia
    </string>
    <string name="textoDoisAnastacia">
        Ajudou escravos quando eram castigados, ou facilitando a fuga. Certa vez, lutou contra a violência física e sexual de um homem branco, por isso, recebeu o castigo de
        usar um mordaça de folha de flandres e uma gargantilha de ferro. Apesar de viver na Bahia e em Minas Gerais foi levada para o Rio de Janeiro no fim da vida, lá
        atribuíram vários milagres durante sua estadia. \n
    </string>
    <string name="textoTituloTresLuizaMahin">
        Luiza Mahín
    </string>
    <string name="textoTresLuizaMahin">
        Passou muito tempo na Bahia e participou do levante na Revolta dos Malês, em 1835 e a Sabinada, em 1837. Trabalhava como ganhadeira (no comércio de rua). \n
    </string>
    <string name="textoTituloQuatroTereza">
        Tereza de Benguela
    </string>
    <string name="textoQuatroTereza">
        No Brasil, dia 25 de julho é comemorado o Dia de Tereza de Benguela em homenagem a líder quilombola. Era mulher do líder do Quilombo de Quarterê ou do Piolho, no
        Mato Grosso. Por lá, foram abrigados até índios bolivianos incomodando autoridades das Coroas espanhola e portuguesa. Tereza foi presa em um dos confrontos e como
        não aceitou a condição de escravizada suicidou-se. \n
    </string>
    <string name="textoTituloCincoAqualtune">
        Aqualtune
    </string>
    <string name="textoCincoAqualtune">
        Era filha do Rei do Congo e foi vendida para o Brasil. Grávida no Quilombo dos Palmares organizou sua primeira fuga. Ficou conhecida por ficar ao lado de Ganga Zumba,
        antecessor de Zumbi, seu neto.  A guerreira morreu queimada. \n
    </string>
    <string name="textoTituloSeisZeferina">
        Zeferina
    </string>
    <string name="textoSeisZeferina">
        Líder no quilombo de Urubu, na Bahia. Era angolana e foi trazida ainda criança para o Brasil. As histórias relatam que ela confrontava os capitães do mato com arco e
        flecha. \n
    </string>
    <string name="textoTituloSeteMariaFelipa">
        Maria Felipa de Oliveira
    </string>
    <string name="textoSeteMariaFelipa">
        Foi líder na Ilha de Itaparica, Bahia. Aprendeu a jogar capoeira para se defender. Tinha como missão principalmente libertar seus descendentes e avós. Ficava escondida
        na Fazenda 27, em Gameleira (Itaparica), para acompanhar, durante a noite, a movimentação das caravelas lusitanas. Em seguida, tomava uma jangada e ia para Salvador,
        passar as informações para o Comando do Movimento de Libertação. \n
    </string>
    <string name="textoTituloOitoAcotirene">
        Acotirene
    </string>
    <string name="textoOitoAcotirene">
        Era considerada matriarca no Quilombo dos Palmares e conselheira dos primeiros negros refugiados na Cerca Real dos Macacos. Um dos mocambos (casa) foi batizado com o
        seu nome. \n
    </string>
    <string name="textoTituloNoveAdelina">
        Adelina Charuteira
    </string>
    <string name="textoNoveAdelina">
        Era uma das líderes no Maranhão. Era filha de uma escravizada com um senhor, por isso, sabia ler e escrever. Apesar do pai, não foi libertada aos 17 anos, mas era
        ativamente parte da sociedade abolicionista de rapazes, o Clube dos Mortos. Para arrecadar dinheiro vendia charutos fabricados pelo pai, com essa articulação
        descobria vários planos de perseguição aos escravos. \n
    </string>
    <string name="textoTituloDezRainha">
        Rainha Tereza do Quariterê
    </string>
    <string name="textoDezRainha">
        Foi guerreira no Quilombo do Quariterê, em Cuiabá. Comandou toda a estrutura política, econômica e administrativa do quilombo. Mantinha até um sistema de defesa com
        armas trocadas com homens brancos ou resgatadas pelos escravizados. \n
    </string>
    <string name="textoTituloOnzeMariana">
        Mariana Crioula
    </string>
    <string name="textoOnzeMariana">
        Era mucama em Vila das Vassouras, Rio de Janeiro. Se juntou com escravizados na maior fuga de escravos da história fluminense em 5 de novembro de 1838. Liderou a fuga
        e um quilombo com Manuel Congo. \n
    </string>
    <string name="textoTituloDozeEsperanca">
        Esperança Garcia
    </string>
    <string name="textoDozeEsperanca">
        Ousou a escrever uma carta para o presidente da Província de São José do Piauí, Gonçalo Lourenço Botelho de Castro, denunciando os maus-tratos físicos de que era
        vítima, ela e seu filho, por parte do feitor da Fazenda Algodões. \n
    </string>
    <string name="textoTituloTrezeMariaFirmina">
        Maria Firmina dos Reis
    </string>
    <string name="textoTrezeMariaFirmina">
        Foi considerada a primeira romancista brasileira, além de escrever o primeiro romance abolicionista, Úrsula, que narra a condição da população negra no Brasil com
        elementos da tradição africana. Dedicou sua vida a leitura e escrita. \n
    </string>
    <string name="textoTituloQuatorzeEvaMaria">
        Eva Maria de Bonsucesso
    </string>
    <string name="textoQuatorzeEvaMaria">
        Era uma escrava alforriada que vendia frutas e verduras no Rio de Janeiro. Foi agredida por um homem branco e conseguiu que ele fosse preso, e condenado pela
        agressão. \n
    </string>
    <string name="textoTituloQuinzeMariaAranha">
        Maria Aranha
    </string>
    <string name="textoQuinzeMariaAranha">
        Foi líder do Quilombo de Mola, no Tocantins. Venceu todos os ataques escravistas e organizou toda a sociedade do local. \n
    </string>
    <string name="textoTituloDezeseisNaAgontime">
        Na Agontimé
    </string>
    <string name="textoDezeseisNaAgontime">
        Era rainha do Benim e foi vendida como escrava para o Maranhão, até ganhou um novo nome, Maria Jesuína. Ela fundou a Casa das Minas e reconstruiu o culto aos
        ancestrais. \n
    </string>
    <string name="textoTituloDezeseteTiaSimoa">
        Tia Simoa
    </string>
    <string name="textoDezeseteTiaSimoa">
        Liderou a luta contra a escravidão no Ceará. Foi do Grupo de Mulheres Negras do Cariri, o Pretas Simoa. \n
    </string>
    <string name="textoTituloDezoitoZacimba">
        Zacimba Gaba
    </string>
    <string name="textoDezoitoZacimba">
        Era princesa angolana e acabou no Espírito Santo. Provocou uma revolta das pessoas escravizadas contra a Casa Grande e liderou um quilombo onde foi rainha. Comandou
        durante anos ataques aos navios, surgindo no meio da noite em canos precárias para resgatar os negros escravos, a referência à sua morte seja em um desses
        enfrentamentos. \n
    </string>
    <string name="textoDireitosAutoraisGeledesOrg">
        "Este conteúdo está disponível no blog (geledes.org); Encontre estas e outras informações através do link:
        <a href="https://www.geledes.org.br/17-mulheres-negras-brasileiras-que-lutaram-contra-escravidao/">Site:
            https://www.geledes.org.br/17-mulheres-negras-brasileiras-que-lutaram-contra-escravidao/</a>". \n
    </string>
</resources>