<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anapaula.quilombolaappv4.Nav2">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTituloMulheresQuilombola"
                android:text="@string/textoTituloMulheresQuilombola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoIntroducaoMulheresQuilombola"
                android:layout_below="@+id/textViewTituloMulheresQuilombola"
                android:text="@string/textoIntroducaoMulheresQuilombola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoByPatriciaGonçalves"
                android:layout_below="@+id/textViewTextoIntroducaoMulheresQuilombola"
                android:text="@string/textoByPatriciaGonçalves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoLayoutEsquerdaDireitosReservados" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoIntroducaoDoisMulheresQuilombola"
                android:layout_below="@+id/textViewTextoByPatriciaGonçalves"
                android:text="@string/textoIntroducaoDoisMulheresQuilombola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloUmDadara"
                android:layout_below="@+id/textViewTextoIntroducaoDoisMulheresQuilombola"
                android:text="@string/textoTituloUmDadara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoUmDandara"
                android:layout_below="@+id/textViewTextoTituloUmDadara"
                android:text="@string/textoUmDadara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloDoisAnastacia"
                android:layout_below="@+id/textViewTextoUmDandara"
                android:text="@string/textoTituloDoisAnastacia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoDoisAnastacia"
                android:layout_below="@+id/textViewTextoTituloDoisAnastacia"
                android:text="@string/textoDoisAnastacia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloTresLuizaMahin"
                android:layout_below="@+id/textViewTextoDoisAnastacia"
                android:text="@string/textoTituloTresLuizaMahin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoTresLuizaMahin"
                android:layout_below="@+id/textViewTextoTituloTresLuizaMahin"
                android:text="@string/textoTresLuizaMahin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloQuatroTereza"
                android:layout_below="@+id/textViewTextoTresLuizaMahin"
                android:text="@string/textoTituloQuatroTereza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoQuatroTereza"
                android:layout_below="@+id/textViewTextoTituloQuatroTereza"
                android:text="@string/textoQuatroTereza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloCincoAqualtune"
                android:layout_below="@+id/textViewTextoQuatroTereza"
                android:text="@string/textoTituloCincoAqualtune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoCincoAqualtune"
                android:layout_below="@+id/textViewTextoTituloCincoAqualtune"
                android:text="@string/textoCincoAqualtune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloSeisZeferina"
                android:layout_below="@+id/textViewTextoCincoAqualtune"
                android:text="@string/textoTituloSeisZeferina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoSeisZeferina"
                android:layout_below="@+id/textViewTextoTituloSeisZeferina"
                android:text="@string/textoSeisZeferina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloSeteMariaFelipa"
                android:layout_below="@+id/textViewTextoSeisZeferina"
                android:text="@string/textoTituloSeteMariaFelipa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoSeteMariaFelipa"
                android:layout_below="@+id/textViewTextoTituloSeteMariaFelipa"
                android:text="@string/textoSeteMariaFelipa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <ImageView
                android:id="@+id/imageViewMariaFelipadeOliveira"
                android:layout_below="@+id/textViewTextoSeteMariaFelipa"
                android:src="@drawable/maria_felipa_de_oliveira"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/estiloImagem" />

            <TextView
                android:id="@+id/textViewTextoDireitosMariaFelipa"
                android:layout_below="@+id/imageViewMariaFelipadeOliveira"
                android:text="@string/textoTituloSeteMariaFelipa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoLayoutEsquerdaDireitosReservados" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoTituloOitoAcotirene"
                android:layout_below="@+id/textViewTextoDireitosMariaFelipa"
                android:text="@string/textoTituloOitoAcotirene"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoOitoAcotirene"
                android:layout_below="@+id/textViewTextoTituloOitoAcotirene"
                android:text="@string/textoOitoAcotirene"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloNoveAdelina"
                android:layout_below="@+id/textViewTextoOitoAcotirene"
                android:text="@string/textoTituloNoveAdelina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoNoveAdelina"
                android:layout_below="@+id/textViewTextoTituloNoveAdelina"
                android:text="@string/textoNoveAdelina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloDezRainha"
                android:layout_below="@+id/textViewTextoNoveAdelina"
                android:text="@string/textoTituloDezRainha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoDezRainha"
                android:layout_below="@+id/textViewTextoTituloDezRainha"
                android:text="@string/textoDezRainha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <ImageView
                android:id="@+id/imageViewRainhaTereza"
                android:layout_below="@+id/textViewTextoDezRainha"
                android:src="@drawable/rainha_tereza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/estiloImagem" />

            <TextView
                android:id="@+id/textViewTextoTituloOnzeMariana"
                android:layout_below="@+id/imageViewRainhaTereza"
                android:text="@string/textoTituloOnzeMariana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoOnzeMariana"
                android:layout_below="@+id/textViewTextoTituloOnzeMariana"
                android:text="@string/textoOnzeMariana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloDozeEsperanca"
                android:layout_below="@+id/textViewTextoOnzeMariana"
                android:text="@string/textoTituloDozeEsperanca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoDozeEsperanca"
                android:layout_below="@+id/textViewTextoTituloDozeEsperanca"
                android:text="@string/textoDozeEsperanca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloTrezeMariaFirmina"
                android:layout_below="@+id/textViewTextoDozeEsperanca"
                android:text="@string/textoTituloTrezeMariaFirmina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoTrezeMariaFirmina"
                android:layout_below="@+id/textViewTextoTituloTrezeMariaFirmina"
                android:text="@string/textoTrezeMariaFirmina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloQuatorzeEvaMaria"
                android:layout_below="@+id/textViewTextoTrezeMariaFirmina"
                android:text="@string/textoTituloQuatorzeEvaMaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoQuatorzeEvaMaria"
                android:layout_below="@+id/textViewTextoTituloQuatorzeEvaMaria"
                android:text="@string/textoQuatorzeEvaMaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloQuinzeMariaAranha"
                android:layout_below="@+id/textViewTextoQuatorzeEvaMaria"
                android:text="@string/textoTituloQuinzeMariaAranha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoQuinzeMariaAranha"
                android:layout_below="@+id/textViewTextoTituloQuinzeMariaAranha"
                android:text="@string/textoQuinzeMariaAranha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloDezeseisNaAgontime"
                android:layout_below="@+id/textViewTextoQuinzeMariaAranha"
                android:text="@string/textoTituloDezeseisNaAgontime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoDezeseisNaAgontime"
                android:layout_below="@+id/textViewTextoTituloDezeseisNaAgontime"
                android:text="@string/textoDezeseisNaAgontime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloDezeseteTiaSimoa"
                android:layout_below="@+id/textViewTextoDezeseisNaAgontime"
                android:text="@string/textoTituloDezeseteTiaSimoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoDezeseteTiaSimoa"
                android:layout_below="@+id/textViewTextoTituloDezeseteTiaSimoa"
                android:text="@string/textoDezeseteTiaSimoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <TextView
                android:id="@+id/textViewTextoTituloDezoitoZacimba"
                android:layout_below="@+id/textViewTextoDezeseteTiaSimoa"
                android:text="@string/textoTituloDezoitoZacimba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoDezoitoZacimba"
                android:layout_below="@+id/textViewTextoTituloDezoitoZacimba"
                android:text="@string/textoDezoitoZacimba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTextoDireitosAutoraisGeledesOrg"
                android:layout_below="@+id/textViewTextoDezoitoZacimba"
                android:text="@string/textoDireitosAutoraisGeledesOrg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoLayoutEsquerdaDireitosReservados" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>