<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_abril"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewAbril"
                android:src="@drawable/mes_abril"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloImagem" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTituloAbril01"
                android:layout_below="@+id/imageViewAbril"
                android:text="@string/textoTituloAbril01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewConteudoAbril01"
                android:layout_below="@+id/textViewTituloAbril01"
                android:text="@string/textoConteudoAbril01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTituloAbril04"
                android:layout_below="@+id/textViewConteudoAbril01"
                android:text="@string/textoTituloAbril04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewConteudoAbril04"
                android:layout_below="@+id/textViewTituloAbril04"
                android:text="@string/textoConteudoAbril04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTituloAbril05"
                android:layout_below="@+id/textViewConteudoAbril04"
                android:text="@string/textoTituloAbril05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewConteudoAbril05"
                android:layout_below="@+id/textViewTituloAbril05"
                android:text="@string/textoConteudoAbril05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTituloAbril25"
                android:layout_below="@+id/textViewConteudoAbril05"
                android:text="@string/textoTituloAbril25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewConteudoAbril25"
                android:layout_below="@+id/textViewTituloAbril25"
                android:text="@string/textoConteudoAbril25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewTituloAbril26"
                android:layout_below="@+id/textViewConteudoAbril25"
                android:text="@string/textoTituloAbril26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoTituloNormal" />

            <com.example.anapaula.quilombolaappv4.JustifyTextView
                android:id="@+id/textViewConteudoAbril26"
                android:layout_below="@+id/textViewTituloAbril26"
                android:text="@string/textoConteudoAbril26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloTextoConteudo" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>